--- a/PROJECT HCI/Japanbook2.html
+++ b/PROJECT HCI/Japanbook2.html
@@ -26,12 +26,12 @@
     </header>
 
     <main>
-        <section class="booking-container">
+        <section class="booking-container ">
             <div class="step2">Booking Details</div>
             <div class="step active">Your Details</div>
             <div class="step3">Payment</div>
         </section>
-        <section class="container">
+        <section class="container slide-right">
             <div class="visit">
                 <div class="title">
                     <h1>Who shall we send these ticket to?</h1>
@@ -105,5 +105,6 @@
             }
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
