--- a/PROJECT HCI/Japanbook3.html
+++ b/PROJECT HCI/Japanbook3.html
@@ -26,12 +26,12 @@
     </header>
 
     <main>
-        <section class="booking-container">
+        <section class="booking-container ">
             <div class="step2">Booking Details</div>
             <div class="step3">Your Details</div>
             <div class="step active">Payment</div>
         </section>
-        <section class="container">
+        <section class="container slide-right">
             <div class="visit">
                 <div class="title">
                     <h1>Select a Payment Method</h1>
@@ -100,6 +100,7 @@
     </main>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="book3.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <footer>
         <!-- Footer content -->
     </footer>
