--- a/PROJECT HCI/Japanbook.html
+++ b/PROJECT HCI/Japanbook.html
@@ -31,7 +31,7 @@
             <div class="step2">Your Details</div>
             <div class="step3">Payment</div>
         </section>
-        <section class="container">
+        <section class="container slide-right">
             <div class="visit">
                 <div class="title">
                     <h1>When will you visit?</h1>
@@ -146,6 +146,7 @@
     </script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="book.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <footer>
         <!-- Footer content -->
