--- a/PROJECT HCI/Japanbook2.html
+++ b/PROJECT HCI/Japanbook2.html
@@ -91,7 +91,7 @@
         </section>
     </main>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="book2.js"></script>
+    <script src="Japanbook2.js"></script>
     <footer>
         <!-- Footer content -->
     </footer>
