--- a/PROJECT HCI/Japanbook3.html
+++ b/PROJECT HCI/Japanbook3.html
@@ -99,7 +99,7 @@
         </section>
     </main>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="book3.js"></script>
+    <script src="Japanbook3.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <footer>
         <!-- Footer content -->
