--- a/PROJECT HCI/Japanbook.html
+++ b/PROJECT HCI/Japanbook.html
@@ -145,7 +145,7 @@
 
     </script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="book.js"></script>
+    <script src="Japanbook.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <footer>
