--- a/PROJECT HCI/SwitzerlandTour.html
+++ b/PROJECT HCI/SwitzerlandTour.html
@@ -56,7 +56,7 @@
                 <div class="time-title"><h3>Time</h3></div>
                 <input type="time" id="timeInput" name="timeInput" placeholder="Select a time">
              
-                <button class="booknow-button"><a href="Japanbook.html">Book Now</a></button>
+                <button class="booknow-button"><a href="covidrestricted.html">Book Now</a></button>
             </div>
             </div>
         </section>
